# FaceShifter

./: .gitignore  .gitigore  gen_prior.m  inference_demo.py  mtcnn_pytorch  online_preview.py  tmp.m  train_AEI.py  train_HEAR.py  video_demo.py
acceleration/: ..gitignore.un~  .CMakeLists.txt.un~  .cuda_kernels.cu.un~  .cuda_kernels.hpp.un~  .cuda_postprocess.cpp.un~  CMakeLists.txt  cuda_kernels.cu  cuda_kernels.hpp  cuda_postprocess.cpp
face_modules/: .gitignore  ReadMe.txt  infer_demo.py  model.py  mtcnn.py  preprocess_images.py
face_modules/mtcnn_pytorch/src/: align_trans.py  matlab_cp2tform.py
network/: AADLayer.py  AEI_Net.py  HEAR_Net.py
tmp_script/: check_arcface_feature_map.py  test_structure_AEI.py
utils/: Dataset.py  download_vggface_dataset.py  split_hearnet_data.py
